Upgraded dependencies; fixed deprecated code